--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,30 +1,28 @@
-
 # API Framework
-flask==2.3.3
-gunicorn==21.2.0
-flask-cors==4.0.0
-jinja2==3.1.2
-requests==2.31.0
+flask>=2.3
+gunicorn>=21.2
+flask-cors>=4.0
+jinja2>=3.1
+requests>=2.31
 
 # Data handling
-pandas==2.1.0
-numpy==1.25.2
-scikit-learn==1.3.0
-yfinance==0.2.28
-pandas-datareader==0.10.0
+pandas>=2.1
+numpy>=1.25
+scikit-learn>=1.3
+yfinance>=0.2.28
+pandas-datareader>=0.10.0
 
 # Deep Learning
-tensorflow==2.13.0
-keras==2.13.1
+tensorflow>=2.13
+keras>=2.13
 
 # Time Series Forecasting
-prophet==1.1.4
-statsmodels==0.14.0
+prophet>=1.1
+statsmodels>=0.14
 
 # Utilities
-matplotlib==3.7.2
-seaborn==0.12.2
-joblib==1.3.2
-plotly==5.17.0
-tqdm==4.66.1
-
+matplotlib>=3.7
+seaborn>=0.12
+joblib>=1.3
+plotly>=5.17
+tqdm>=4.66
